--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,33 +1,95 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
+    margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-}
-
-h1, h2 {
-    color: #333;
-}
-
-#menu {
-    margin-bottom: 20px;
-}
-
-#orderForm {
+  }
+  
+  div {
+    width: 460px;
+  }
+  
+  .imagesHeader {
+    margin-bottom: 50px;
+  }
+  .images {
+    height: 200px;
+    margin: 0 auto;
+    display: flex;
+    margin-bottom: 50px;
+  }
+  .images2,
+  .images3,
+  .images4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 33.3%;
+    height: 100%;
+  }
+  
+  img {
+    height: 100%;
+  }
+  
+  h1,
+  h2 {
+    text-align: center;
     margin-top: 20px;
-}
-
-input, select, button {
+  }
+  
+  #menu {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 400px;
+  }
+  
+  #order-form {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  label {
+    display: block;
+    margin-top: 10px;
+  }
+  
+  input,
+  select {
+    width: 95%;
     padding: 10px;
     margin-top: 5px;
-    margin-bottom: 5px;
-    width: 200px;
-    display: block;
-}
-
-button {
-    cursor: pointer;
-    background-color: #5cb85c;
-    color: white;
+  }
+  
+  button {
+    background-color: #007bff;
+    color: #fff;
     border: none;
-}
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 10px auto;
+    width: 100%;
+    height: 100px;
+    font-size: 25px;
+    transition: background-color 0.3s ease;
+  }
+  
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  #order-response {
+    text-align: center;
+    margin-top: 20px;
+    font-weight: bold;
+    color: #007bff;
+  }
+  
